--- a/app/views/template/fields.html
+++ b/app/views/template/fields.html
@@ -1,5 +1,5 @@
 {% extends "layout.html" %}
-{% set title = data['template-name'] %}
+{% set title = template.name %}
 {% block page_title %}{{ template }}{% endblock %}
 
 {% block content %}
@@ -31,32 +31,32 @@
           <li class="course-parts-item">
             <h3 class="course-part-task">About this course</h3>
 
-            <a class="course-part-task-action" href="/template/about-this-course">Edit</a>
+            <a class="course-part-task-action" href="/template/{{ template.slug }}/about-this-course">Edit</a>
             <dl class="course-part-tasks">
-              {{ macros.coursePart(subject.slug + '-' + accrediting.slug + '-' + loop.index + '-about-this-course', 'About this course') }}
-              {{ macros.coursePart(subject.slug + '-' + accrediting.slug + '-' + loop.index + '-interview-process', 'Interview process (optional)') }}
-              {{ macros.coursePart(subject.slug + '-' + accrediting.slug + '-' + loop.index + '-placement-school-policy', 'How school placements work') }}
+              {{ macros.coursePart(template.slug + '-template-about-this-course', 'About this course') }}
+              {{ macros.coursePart(template.slug + '-template-interview-process', 'Interview process (optional)') }}
+              {{ macros.coursePart(template.slug + '-template-placement-school-policy', 'How school placements work') }}
             </dl>
           </li>
           <li class="course-parts-item">
             <h3 class="course-part-task">Course length and fees</h3>
-            <a class="course-part-task-action" href="/template/fees-and-length">Edit</a>
+            <a class="course-part-task-action" href="/template/{{ template.slug }}/fees-and-length">Edit</a>
             <dl class="course-part-tasks">
-              {{ macros.coursePart(subject.slug + '-' + accrediting.slug + '-' + loop.index + '-duration', 'Course length') }}
-              {{ macros.coursePart(subject.slug + '-' + accrediting.slug + '-' + loop.index + '-fee', 'Fee for UK and EU students') }}
-              {{ macros.coursePart(subject.slug + '-' + accrediting.slug + '-' + loop.index + '-fee-international', 'Fee for international students (optional)') }}
+              {{ macros.coursePart(template.slug + '-template-duration', 'Course length') }}
+              {{ macros.coursePart(template.slug + '-template-fee', 'Fee for UK and EU students') }}
+              {{ macros.coursePart(template.slug + '-template-fee-international', 'Fee for international students (optional)') }}
             </dl>
           </li>
           <li class="course-parts-item">
             <h3 class="course-part-task">
               Requirements and eligbility
             </h3>
-            <a class="course-part-task-action" href="/template/requirements">Edit</a>
+            <a class="course-part-task-action" href="/template/{{ template.slug }}/requirements">Edit</a>
 
             <dl class="course-part-tasks">
-              {{ macros.coursePart(subject.slug + '-' + accrediting.slug + '-qualifications-required', 'Qualifications needed') }}
-              {{ macros.coursePart(subject.slug + '-' + accrediting.slug + '-personal-qualities', 'Personal qualities (optional)') }}
-              {{ macros.coursePart(subject.slug + '-' + accrediting.slug + '-other-requirements', 'Other requirements (optional)') }}
+              {{ macros.coursePart(template.slug + '-template-qualifications-required', 'Qualifications needed') }}
+              {{ macros.coursePart(template.slug + '-template-personal-qualities', 'Personal qualities (optional)') }}
+              {{ macros.coursePart(template.slug + '-template-other-requirements', 'Other requirements (optional)') }}
             </dl>
           </li>
         </ul>
@@ -73,7 +73,7 @@
 
         <ul class="list">
           <li>
-            <a href="/template/apply">Edit courses using this template</a>
+            <a href="/template/{{ template.slug }}/apply">Edit courses using this template</a>
           </li>
           <li>
             <a href="#">Rename template</a>
