--- a/app/views/template/requirements.html
+++ b/app/views/template/requirements.html
@@ -6,25 +6,25 @@
 
 <main id="content" role="main">
   {% include "includes/phase_banner_beta.html" %}
-  <a href="/template/fields" class="link-back">Back</a>
+  <a href="/template/{{ template.slug }}" class="link-back">Back</a>
 
   <h1 class="heading-xlarge">
-    <span class="heading-secondary">Template: {{ data['template-name'] }}</span>
+    <span class="heading-secondary">Template: {{ template.name }}</span>
     {{ title }}
   </h1>
 
   <div class="grid-row">
     <div class="column-two-thirds">
-      <form action="/course/{{ accrediting.slug }}/{{ subject.slug }}" method="post">
-        {{ macros.textarea('template-qualifications-required', 'Qualifications needed', 8, 'The minimum academic qualifications required for this course.', 100) }}
-        {{ macros.textarea('template-personal-qualities', 'Personal qualities (optional)', 8, 'Any specific qualities you look for in a candidate. For example, confidence in talking to large groups.', 100) }}
-        {{ macros.textarea('template-other-requirements', 'Other requirements (optional)', 8, 'Non-academic requirements, eg DBS checks or work experience, if relevant.', 100) }}
+      <form action="/template/{{ template.slug }}" method="post">
+        {{ macros.textarea(template.slug + '-template-qualifications-required', 'Qualifications needed', 8, 'The minimum academic qualifications required for this course.', 100) }}
+        {{ macros.textarea(template.slug + '-template-personal-qualities', 'Personal qualities (optional)', 8, 'Any specific qualities you look for in a candidate. For example, confidence in talking to large groups.', 100) }}
+        {{ macros.textarea(template.slug + '-template-other-requirements', 'Other requirements (optional)', 8, 'Non-academic requirements, eg DBS checks or work experience, if relevant.', 100) }}
 
         <div class="add-double-bottom-margin">
           <input type="submit" class="button" value="Save" />
         </div>
 
-        <a href="/template/fields">Cancel changes</a>
+        <a href="/template/{{ template.slug }}">Cancel changes</a>
       </form>
     </div>
   </div>
