--- a/app/views/template/fields.html
+++ b/app/views/template/fields.html
@@ -69,7 +69,7 @@
 
         <hr />
 
-        <p>This template is used by 0 courses.</p>
+        <!-- <p>This template is used by 0 courses.</p> -->
 
         <ul class="list">
           <li>
